# the library names to build
lib_LTLIBRARIES = libunittest.la

libunittest_la_LDFLAGS = -version-info 8:0:0

# where to install the headers on the system
libunittest_ladir = $(includedir)/libunittest

# the list of header files that belong to the library (to be installed later)
libunittest_la_HEADERS = \
argparser.hpp \
assertions.hpp \
checkers.hpp \
environments.hpp \
formatting.hpp \
macros.hpp \
main.hpp \
random.hpp \
shortcuts.hpp \
strings.hpp \
testcase.hpp \
testcollection.hpp \
testfailure.hpp \
testlog.hpp \
testregistry.hpp \
testresults.hpp \
testrun.hpp \
teststatus.hpp \
testsuite.hpp \
tuplemap.hpp \
typetraits.hpp \
unittest.hpp \
userargs.hpp \
utilities.hpp \
version.hpp

# the sources to add to the library and to add to the source distribution
libunittest_la_SOURCES = \
argparser.cpp \
environments.cpp \
formatting.cpp \
main.cpp \
random.cpp \
testcollection.cpp \
testfailure.cpp \
testlog.cpp \
testresults.cpp \
testrun.cpp \
testsuite.cpp \
userargs.cpp \
utilities.cpp 
